@startuml
top to bottom direction
hide empty members
skinparam nodesep 50
skinparam ranksep 60

class User {
  userId: UUID
  fullName: String
  email: String
  phone: String
}

class Host {
  hostRating: float
  isVerified: boolean
}

class Renter {
  renterRating: float
}

class Listing {
  listingId: UUID
  title: String
  description: String
  pricePerDay: float
}

class PropertyListing {
  bedrooms: int
  bathrooms: int
  maxGuests: int
}

class EquipmentListing {
  category: String
  condition: String
}

class AvailabilitySlot {
  startDate: Date
  endDate: Date
  isAvailable: boolean
}

class Booking {
  bookingId: UUID
  startDate: Date
  endDate: Date
  totalAmount: float
}

class Payment {
  paymentId: UUID
  amount: float
  paidAt: DateTime
}

class Review {
  reviewId: UUID
  rating: int
  comment: String
  createdAt: DateTime
}

User <|-- Host
User <|-- Renter

Listing <|-- PropertyListing
Listing <|-- EquipmentListing

Listing "1" -- "0..*" AvailabilitySlot

Host "1" -- "0..*" Listing : creates
Renter "1" -- "0..*" Booking : makes
Listing "1" -- "0..*" Booking : for
Booking "1" -- "0..1" Payment : has
Renter "1" -- "0..*" Review : writes
Listing "1" -- "0..*" Review : receives

@enduml
